html exercise before

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <header>
       <h1>Wired</h1>
       <h2>Hard rock for the Digital Age</h2>
+      <nav>
+        <ul>
+          <li><a href=index.html>Home</a></li>
+          <li><a href=about.html>About</a></li>
+          <li><a href=Bio.html>Biography</a></li>
+          <li><a>Albums</a></li>
+          <li><a>Shows</a>
+              <li><a>UK Tour</a></li>
+              <li><a>US Tour</a></li>
+          </li>
+          <li><a>Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
     <div>
@@ -22,6 +35,10 @@
     <div>
       <img src="./assets/band-1.png" alt="Image" />
     </div>
-    
+
+    <footer>
+      <p> Copyright 2018 </p>
+    </footer>
+
   </body>
 </html>
